# rdpe

./: Cargo.toml  README.md  rust-analyzer.toml  simulation.json
benches/: bench_simple.rs  shader_gen.rs
book/: book.toml
book/book/: 404.html  architecture.html  emitters.html  examples.html  index.html  introduction.html  particles.html  print.html  rules.html  searchindex.js  spatial-hashing.html  toc.html  toc.js  typed-interactions.html  visuals.html
book/book/advanced/: custom-functions.html  custom-rules.html  custom-uniforms.html  egui-integration.html  fields.html  fragment-shaders.html  performance.html  post-processing.html  shader-utilities.html  spatial-hashing.html  textures.html
book/book/basics/: architecture.html  emitters.html  input.html  particles.html  rules.html  time.html  typed-interactions.html  visuals.html
book/book/concepts/: agents.html  fields.html  multi_types.html
book/src/: SUMMARY.md  editor.md  examples.md  introduction.md  particles.md  typed-interactions.md  visuals.md
book/src/advanced/: agent-state-machines.md  custom-functions.md  custom-rules.md  custom-uniforms.md  custom-vertex.md  egui-integration.md  fields.md  fragment-shaders.md  performance.md  post-processing.md  shader-utilities.md  spatial-hashing.md  textures.md
book/src/basics/: architecture.md  emitters.md  input.md  particles.md  rules.md  time.md  visuals.md
book/src/concepts/: agents.md  multi_types.md  the-rendering-pipeline.md
examples/: agent_demo.rs  aquarium.rs  attractor.rs  bench_neighbors.rs  bioluminescent_deep_sea.rs  boids.rs  bouncing.rs  cells.rs  chemistry.rs  compute_demo.rs  connections.rs  cpu_readback.rs  crystal_growth.rs  custom_dynamic.rs  custom_shader.rs  custom_vertex.rs  density_fluids.rs  editor.rs  egui_controls.rs  egui_interactive.rs  erosion.rs  explosion.rs  falling_leaves.rs  falling_sand.rs  fireflies.rs  fireworks.rs  fountain.rs  galaxy.rs  getting_started.rs  glow.rs  gravity_visualizer.rs  heat_transfer.rs  inbox.rs  infection.rs  input_demo.rs  lifecycle_demo.rs  meta_editor.rs  meta_sim.rs  molecular_soup.rs  multi_field.rs  (+27 more)
examples/experimental/: aurora.rs  black_hole.rs  cosmic_jellyfish.rs  egui_controls.rs  egui_interactive.rs  ethereal_loop.rs  ethereal_web.rs  firefly_grove.rs  fluid_galaxy.rs  fluid_galaxy_interactive.rs  lorenz_attractor.rs  lorenz_attractor_interactive.rs  murmuration.rs  mycelial_network_interactive.rs  neon_assault.rs  neon_assault_interactive.rs  particle_life_interactive.rs  plasma_storm.rs  reaction_diffusion_interactive.rs  thought_storm.rs
examples/rules/: bondsprings.rs  bounce_walls.rs  chainsprings.rs  curl.rs  fluid.rs  magnetism.rs  nbody.rs  neighbors.rs  orbit.rs  oscillate.rs  point_gravity.rs  spring.rs  turbulence.rs  vortex.rs
rdpe-derive/: Cargo.toml
rdpe-derive/src/: lib.rs
rdpe-editor/: Cargo.toml  README.md  build-web.sh  test.json  test2.json
rdpe-editor/src/: code_export.rs  config.rs  embedded.rs  lib.rs  main.rs  particle.rs  shader_gen.rs  shader_validate.rs  spawn.rs
rdpe-editor/src/config/: fields.rs  mod.rs  mouse.rs  particle_fields.rs  rules.rs  spawn.rs  uniforms.rs  visuals.rs  volume.rs
rdpe-editor/src/embedded/: mod.rs  picking.rs  widget.rs
rdpe-editor/src/embedded/visualizations/: connections.rs  grid.rs  mod.rs  trails.rs  wireframe.rs
rdpe-editor/src/ui/: custom_panel.rs  effects_panel.rs  export_panel.rs  fields_panel.rs  mod.rs  mouse_panel.rs  particle_fields_panel.rs  presets.rs  rules_panel.rs  spawn_panel.rs  visuals_panel.rs  volume_panel.rs
rdpe-editor/src/ui/rules_panel/: helpers.rs  mod.rs  renderers.rs  templates.rs
rdpe-editor/web/: index.html
src/: compute.wgsl  emitter.rs  error.rs  field.rs  input.rs  interactions.rs  lib.rs  lifecycle.rs  main.rs  rules.rs  selection.rs  shader.rs  shader.wgsl  shader_utils.rs  simulation.rs  spatial.rs  spawn.rs  sub_emitter.rs  textures.rs  time.rs  uniforms.rs  visuals.rs  window.rs
src/gpu/: camera.rs  connections.rs  egui_integration.rs  field_gpu.rs  mod.rs  picking.rs  post_process.rs  spatial_gpu.rs  spatial_grid_viz.rs  sub_emitter_gpu.rs  trails.rs  volume_render.rs  wireframe.rs
tests/: derive_tests.rs
