[package]
name = "rdpe"
description = "Reaction Diffusion Particle Engine - GPU particle simulations made easy"
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace]
members = [".", "rdpe-derive"]

[features]
default = []
egui = ["dep:egui", "dep:egui-wgpu", "dep:egui-winit"]

[dependencies]
bytemuck = { version = "1.24.0", features = ["derive"] }
glam = { version = "0.29", features = ["bytemuck"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
pollster = "0.4"
wgpu = "24.0"
winit = "0.30.12"
rdpe-derive = { path = "rdpe-derive" }

# Optional egui support
egui = { version = "0.31", optional = true }
egui-wgpu = { version = "0.31", optional = true }
egui-winit = { version = "0.31", optional = true }

[dev-dependencies]
rand = "0.8"
criterion = "0.5"
naga = { version = "24.0", features = ["wgsl-in"] }

[[bench]]
name = "shader_gen"
harness = false

[[example]]
name = "boids"
path = "examples/boids.rs"

[[example]]
name = "predator_prey"
path = "examples/predator_prey.rs"

[[example]]
name = "infection"
path = "examples/infection.rs"

[[example]]
name = "lifecycle_demo"
path = "examples/lifecycle_demo.rs"

# Single-rule examples in rules/ subdirectory
[[example]]
name = "bounce_walls"
path = "examples/rules/bounce_walls.rs"

[[example]]
name = "vortex"
path = "examples/rules/vortex.rs"

[[example]]
name = "curl"
path = "examples/rules/curl.rs"

[[example]]
name = "turbulence"
path = "examples/rules/turbulence.rs"

[[example]]
name = "orbit"
path = "examples/rules/orbit.rs"

[[example]]
name = "neighbors"
path = "examples/rules/neighbors.rs"

[[example]]
name = "nbody"
path = "examples/rules/nbody.rs"

[[example]]
name = "fluid"
path = "examples/rules/fluid.rs"

[[example]]
name = "magnetism"
path = "examples/rules/magnetism.rs"

[[example]]
name = "point_gravity"
path = "examples/rules/point_gravity.rs"

[[example]]
name = "spring"
path = "examples/rules/spring.rs"

[[example]]
name = "oscillate"
path = "examples/rules/oscillate.rs"

# Benchmarks
[[example]]
name = "bench_simple"
path = "examples/bench_simple.rs"

[[example]]
name = "bench_neighbors"
path = "examples/bench_neighbors.rs"

# Inbox (particle communication) examples
[[example]]
name = "inbox"
path = "examples/inbox.rs"

[[example]]
name = "slime_mold"
path = "examples/slime_mold.rs"
required-features = ["egui"]

[[example]]
name = "particle_life_interactive"
path = "examples/particle_life_interactive.rs"
required-features = ["egui"]

# Experimental/creative examples in experimental/ subdirectory
[[example]]
name = "black_hole"
path = "examples/experimental/black_hole.rs"

[[example]]
name = "thought_storm"
path = "examples/experimental/thought_storm.rs"

[[example]]
name = "fluid_galaxy_interactive"
path = "examples/experimental/fluid_galaxy_interactive.rs"
required-features = ["egui"]

[[example]]
name = "ethereal_loop"
path = "examples/experimental/ethereal_loop.rs"

[[example]]
name = "neon_assault_interactive"
path = "examples/experimental/neon_assault_interactive.rs"
required-features = ["egui"]

[[example]]
name = "mycelial_network_interactive"
path = "examples/experimental/mycelial_network_interactive.rs"
required-features = ["egui"]

[[example]]
name = "lorenz_attractor"
path = "examples/experimental/lorenz_attractor.rs"

[[example]]
name = "lorenz_attractor_interactive"
path = "examples/experimental/lorenz_attractor_interactive.rs"
required-features = ["egui"]

[[example]]
name = "reaction_diffusion_interactive"
path = "examples/experimental/reaction_diffusion_interactive.rs"
required-features = ["egui"]

# Egui examples (require --features egui)
[[example]]
name = "egui_controls"
path = "examples/egui_controls.rs"
required-features = ["egui"]

[[example]]
name = "egui_interactive"
path = "examples/egui_interactive.rs"
required-features = ["egui"]

[[example]]
name = "custom_shader"
path = "examples/custom_shader.rs"

[[example]]
name = "post_process"
path = "examples/post_process.rs"

[[example]]
name = "texture_example"
path = "examples/texture_example.rs"

[[example]]
name = "slime_mold_field"
path = "examples/slime_mold_field.rs"
required-features = ["egui"]

[[example]]
name = "multi_field"
path = "examples/multi_field.rs"

[[example]]
name = "volume_render"
path = "examples/volume_render.rs"

[[example]]
name = "spatial_grid_demo"
path = "examples/spatial_grid_demo.rs"

[[example]]
name = "gravity_visualizer"
path = "examples/gravity_visualizer.rs"
required-features = ["egui"]

[[example]]
name = "aurora"
path = "examples/experimental/aurora.rs"
required-features = ["egui"]

[[example]]
name = "density_fluids"
path = "examples/density_fluids.rs"
required-features = ["egui"]

[[example]]
name = "wave_field"
path = "examples/wave_field.rs"
required-features = ["egui"]

[[example]]
name = "fireflies"
path = "examples/fireflies.rs"
required-features = ["egui"]

[[example]]
name = "neural_network"
path = "examples/neural_network.rs"
required-features = ["egui"]

[[example]]
name = "signal_swarm"
path = "examples/signal_swarm.rs"
required-features = ["egui"]

[[example]]
name = "compute_demo"
path = "examples/compute_demo.rs"
required-features = ["egui"]
