[package]
name = "rdpe"
description = "Reaction Diffusion Particle Engine - GPU particle simulations made easy"
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace]
members = [".", "rdpe-derive"]

[features]
default = []
egui = ["dep:egui", "dep:egui-wgpu", "dep:egui-winit"]

[dependencies]
bytemuck = { version = "1.24.0", features = ["derive"] }
glam = { version = "0.29", features = ["bytemuck"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
pollster = "0.4"
rand = { version = "0.8", features = ["small_rng"] }
wgpu = "24.0"
winit = "0.30.12"
rdpe-derive = { path = "rdpe-derive" }

# Optional egui support
egui = { version = "0.31", optional = true }
egui-wgpu = { version = "0.31", optional = true }
egui-winit = { version = "0.31", optional = true }

[dev-dependencies]
criterion = "0.5"
naga = { version = "24.0", features = ["wgsl-in"] }

[[bench]]
name = "shader_gen"
harness = false

# Benchmarks
[[bench]]
name = "bench_simple"
path = "bench/bench_simple.rs"

[[bench]]
name = "bench_neighbors"
path = "bench/bench_neighbors.rs"


[[example]]
name = "particle_life_interactive"
path = "examples/particle_life_interactive.rs"
required-features = ["egui"]

# Experimental/creative examples in experimental/ subdirectory
[[example]]
name = "black_hole"
path = "examples/experimental/black_hole.rs"

[[example]]
name = "thought_storm"
path = "examples/experimental/thought_storm.rs"

[[example]]
name = "fluid_galaxy_interactive"
path = "examples/experimental/fluid_galaxy_interactive.rs"
required-features = ["egui"]

[[example]]
name = "ethereal_loop"
path = "examples/experimental/ethereal_loop.rs"

[[example]]
name = "neon_assault_interactive"
path = "examples/experimental/neon_assault_interactive.rs"
required-features = ["egui"]

[[example]]
name = "mycelial_network_interactive"
path = "examples/experimental/mycelial_network_interactive.rs"
required-features = ["egui"]

[[example]]
name = "lorenz_attractor_interactive"
path = "examples/experimental/lorenz_attractor_interactive.rs"
required-features = ["egui"]

[[example]]
name = "reaction_diffusion_interactive"
path = "examples/experimental/reaction_diffusion_interactive.rs"
required-features = ["egui"]

# Egui examples (require --features egui)
[[example]]
name = "egui_controls"
path = "examples/experimental/egui_controls.rs"
required-features = ["egui"]

[[example]]
name = "egui_interactive"
path = "examples/experimental/egui_interactive.rs"
required-features = ["egui"]

[[example]]
name = "aurora"
path = "examples/experimental/aurora.rs"
required-features = ["egui"]

[[example]]
name = "gravity_visualizer"
path = "examples/gravity_visualizer.rs"
required-features = ["egui"]

[[example]]
name = "neural_network"
path = "examples/neural_network.rs"
required-features = ["egui"]

[[example]]
name = "slime_mold_field"
path = "examples/slime_mold_field.rs"
required-features = ["egui"]

[[example]]
name = "wave_field"
path = "examples/wave_field.rs"
required-features = ["egui"]

[[example]]
name = "particle_inspector"
path = "examples/particle_inspector.rs"
required-features = ["egui"]
