[package]
name = "rdpe-editor"
version = "0.1.0"
edition = "2021"
description = "Visual editor for RDPE particle simulations"
license = "MIT"

[features]
default = ["egui"]
egui = ["dep:egui", "dep:eframe"]

[[bin]]
name = "rdpe-editor"
path = "src/main.rs"

[[bin]]
name = "rdpe-runner"
path = "src/bin/runner.rs"

[dependencies]
rdpe = { path = "..", features = ["egui"] }
eframe = { version = "0.31", optional = true }
egui = { version = "0.31", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
glam = "0.29"
rfd = "0.15"
bytemuck = { version = "1.24", features = ["derive"] }
