[package]
name = "rdpe-editor"
version = "0.1.0"
edition = "2021"
description = "Visual editor for RDPE particle simulations"
license = "MIT"

[features]
default = ["egui"]
egui = ["dep:egui", "dep:eframe", "dep:egui-wgpu", "dep:wgpu"]

[[bin]]
name = "rdpe-editor"
path = "src/main.rs"

[[bin]]
name = "rdpe-runner"
path = "src/bin/runner.rs"

[dependencies]
rdpe = { path = "..", features = ["egui"] }
eframe = { version = "0.31", optional = true, features = ["wgpu"] }
egui = { version = "0.31", optional = true }
egui-wgpu = { version = "0.31", optional = true }
wgpu = { version = "24.0", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
glam = "0.29"
bytemuck = { version = "1.24", features = ["derive"] }
rand = "0.8"
naga = { version = "24.0", features = ["wgsl-in"] }

# Native-only dependencies
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rfd = "0.15"

# WASM dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "HtmlElement",
    "Blob",
    "BlobPropertyBag",
    "Url",
    "HtmlAnchorElement",
    "FileReader",
    "HtmlInputElement",
    "FileList",
    "File",
] }
js-sys = "0.3"
console_error_panic_hook = "0.1"
web-time = "1.1"
